--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
     "name": "restfull",
     "version": "1.0.0",
+    "engines": {
+        "node": "12.18.3"
+    },
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -11,7 +14,12 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^5.0.0",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.10.4",
+        "mongoose-unique-validator": "^2.0.3",
+        "underscore": "^1.11.0"
     }
 }
