--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
         "node": "12.18.3"
     },
     "description": "",
-    "main": "index.js",
+    "main": "server.js",
     "scripts": {
         "start": "node src/server.js",
         "nodemon": "nodemon src/server.js",
@@ -18,8 +18,10 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.10.4",
         "mongoose-unique-validator": "^2.0.3",
+        "nodemon": "^2.0.4",
         "underscore": "^1.11.0"
     }
 }
